# BoxBuilder_TC

./: CMakeLists.txt  README.md  adfsadfsdafsdfsd  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewplay.cpp  viewplay.h  viewplay.ui
methods/: arraymess.cpp  arraymess.h  arraypush.cpp  arraypush.h  fifo.cpp  fifo.h  lifo.cpp  lifo.h  nodevector.cpp  nodevector.h  probability.cpp  probability.h  randomnative.cpp  randomnative.h  sortarrayplayers.cpp  sortarrayplayers.h
methods/controller/: controllerVector.cpp  controllerVector.h
models/: infonodo.h  node.cpp  node.h  nodeboard.cpp  nodeboard.h  nodefifo.cpp  nodefifo.h  nodeinfo.cpp  nodeinfo.h  nodelifo.cpp  nodelifo.h  nodelinked.cpp  nodelinked.h  nodofifo.cpp  nodofifo.h  nodoinfo.cpp  nodoinfo.h  players.cpp  players.h
models/controller/: controllerBL.cpp  controllerBL.h  powercontroller.cpp  powercontroller.h
models/enum/: powermanager.cpp  powermanager.h
powers/: firstclass.cpp  firstclass.h  fourthclass.cpp  fourthclass.h  secondclass.cpp  secondclass.h  specialclass.cpp  specialclass.h  thirdclass.cpp  thirdclass.h
rules/: GameRules.cpp  GameRules.h  gamerules.h  rulesgame.cpp  rulesgame.h
utils/: boxgraphics.cpp  boxgraphics.h  clickgraphics.cpp  clickgraphics.h  minBoardSize.cpp  minBoardSize.h  singleton.h
